--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_et.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_et.arb
@@ -5,6 +5,7 @@
   "ok": "Ok",
   "yes": "Jah",
   "no": "Ei",
+  "maybe": "Maybe",
   "cancel": "Tühista",
   "textContinue": "Jätka",
   "alertServerErrorTitle": "Oih!",
@@ -60,8 +61,8 @@
   "resultsPage3Title": "Kui lähedal ma olen Euroopa Parlamendi fraktsioonidele",
   "resultsPage4TitleTop": "EL integratsiooni poolt",
   "resultsPage4TitleBottom": "EL integratsiooni vastu",
-  "resultsPage4TitleLeft": "Vasak",
-  "resultsPage4TitleRight": "Parem",
+  "resultsPage4TitleLeft": "Conservative",
+  "resultsPage4TitleRight": "Progressive",
   "resultsPage4TitleUserHere": "Siin mina, tere!",
   "resultsPage5Title": "Millisele Euroopa Parlamendi fraktsioonile on minu vaated kõige lähemal järgmistel teemadel?",
   "resultsPage5Topic1": "Keskkond",
@@ -92,6 +93,8 @@
   "settingsPageTitleLanguage": "Keel",
   "settingsPageSubtitleLanguage": "Eelistan äppi kasutada keeles:",
   "settingsPageTextLanguage": "Keele vahetamiseks vajuta praeguse keelevaliku peale",
+  "settingsPageTitleElection": "Election",
+  "settingsPageTextElection": "To change the questionnaire, click on the current one",
   "settingsPageTitleAbout": "Sellest rakendusest",
   "settingsPageTextAbout": "Palumba ei ole ettevõte, erakond ega valitsus. Oleme iseseisev mittetulundusühing, kuhu kuulub üle 120 noore 🐦 üle Euroopa, kes eelmisel suvel said kokku ja hakkasid seda rakendust meisterdama. Meil on üks eesmärk: aidata teil paremini mõista, kuidas Euroopa Parlamendi valimised toimivad ja millised kandidaatide nimekirjad võiksid teie ideedega ühtida, et saaksite enesekindlamalt hääletada inimeste poolt, kes teie prioriteete toetavad. Meie algoritm on avatud lähtekoodiga ja väited, mille osas oma eelistustest teada andsite, vaatasid üle poliitikateadlased. Teie andmed on krüpteeritud ja meil pole võimalust teid kunagi tuvastada :)",
   "settingsPageTitleAssociation": "Ühing",
@@ -165,11 +168,11 @@
   "@resultsPage4TitleBottom_ger25": {
     "description": "-> resultsPage4TitleBottom"
   },
-  "resultsPage4TitleLeft_ger25": "Economic intervention",
+  "resultsPage4TitleLeft_ger25": "Free market economics",
   "@resultsPage4TitleLeft_ger25": {
     "description": "-> resultsPage4TitleLeft"
   },
-  "resultsPage4TitleRight_ger25": "Free market economics",
+  "resultsPage4TitleRight_ger25": "Economic intervention",
   "@resultsPage4TitleRight_ger25": {
     "description": "-> resultsPage4TitleRight"
   },
@@ -197,7 +200,7 @@
   "@resultsPage6_1Title_ger25": {
     "description": "-> resultsPage6_1Title"
   },
-  "resultsPage6_2Title_ger25": "But at the German election you also have the option to vote for a specific candidate",
+  "resultsPage6_2Title_ger25": "But in the German election you also have the option to vote for a specific candidate",
   "@resultsPage6_2Title_ger25": {
     "description": "resultsPage6_2Title"
   },
@@ -233,6 +236,7 @@
   "@messageScreenNo_ger25": {
     "description": "-> messageScreenNo"
   },
+  "onBoardingStep4Title": "Level of Education",
   "onBoardingStep4Option1_ger25": "University degree",
   "@onBoardingStep4Option1_ger25": {
     "description": "-> onBoardingStep4Option1"
@@ -245,11 +249,11 @@
   "@onBoardingStep4Option3_ger25": {
     "description": "-> onBoardingStep4Option3"
   },
-  "onBoardingStep4Option4_ger25": "⁠Secondary school diploma (Realschulabschluss)",
+  "onBoardingStep4Option4_ger25": "Middle school diploma",
   "@onBoardingStep4Option4_ger25": {
     "description": "-> onBoardingStep4Option4"
   },
-  "onBoardingStep4Option5_ger25": "⁠Intermediate school diploma (MSA)",
+  "onBoardingStep4Option5_ger25": "some middle school",
   "@onBoardingStep4Option5_ger25": {
     "description": "-> onBoardingStep4Option5"
   },
@@ -334,5 +338,20 @@
   "resultsPage9Text2_ger25": "made for you!",
   "@resultsPage9Text2_ger25": {
     "description": "-> resultsPage9Text2"
-  }
+  },
+  "resultsPage2NoResults": "No results found",
+  "resultsPage10VotingDay": "Get Ready, Voting Day is {date}",
+  "resultsPage10VotingQuestion": "Are you going to vote?",
+  "pushDeactivatedTitle": "Notifications disabled",
+  "pushDeactivatedText": "To be able to receive Push Notifcation enable them in the settings",
+  "pushDeactivatedCancel": "Close",
+  "pushDeactivatedConfirm": "Open Settings",
+  "resultsPageCandidatesShuffle": "Shuffle my politcal love 🔀",
+  "resultsPageCandidatesNoParties": "no local parties",
+  "electionPageTitle": "Choose an Election",
+  "electionPageSubtitle": "",
+  "electionEU": "European Elections 2024 🇪🇺",
+  "electionDE": "Bundestagswahl 2025 🇩🇪",
+  "resultsPageAllPartiesTitle_ger25": "Your personal ranking of all parties",
+  "resultsPageAllPartiesDescription_ger25": "Including 12 political parties in all Bundesländer in Germany"
 }
