--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_pl.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_pl.arb
@@ -5,6 +5,7 @@
   "ok": "Ok",
   "yes": "Tak",
   "no": "Nie",
+  "maybe": "Maybe",
   "cancel": "Anuluj",
   "textContinue": "Dalej",
   "alertServerErrorTitle": "Ups!",
@@ -60,8 +61,8 @@
   "resultsPage3Title": "Jak bardzo jest mi blisko do grup Parlamentu Europejskiego",
   "resultsPage4TitleTop": "Za integracją europejską",
   "resultsPage4TitleBottom": "Przeciwko integracji europejskiej",
-  "resultsPage4TitleLeft": "Lewica",
-  "resultsPage4TitleRight": "Prawica",
+  "resultsPage4TitleLeft": "Conservative",
+  "resultsPage4TitleRight": "Progressive",
   "resultsPage4TitleUserHere": "It’s me, hi!",
   "resultsPage5Title": "Jeśli chodzi o bardziej konkretne tematy, do których grup Parlamentu Europejskiego jest mi bliżej?",
   "resultsPage5Topic1": "Kwestie środowiskowe",
@@ -92,6 +93,8 @@
   "settingsPageTitleLanguage": "Język",
   "settingsPageSubtitleLanguage": "Wolę używać tej aplikacji po",
   "settingsPageTextLanguage": "Żeby zmienić język, kliknij na język aktualnie używany w aplikacji",
+  "settingsPageTitleElection": "Election",
+  "settingsPageTextElection": "To change the questionnaire, click on the current one",
   "settingsPageTitleAbout": "O aplikacji",
   "settingsPageTextAbout": "Palumba nie jest firmą, partią polityczną, czy rządem. Jesteśmy niezależnym stowarzyszeniem non-profit złożonym z ponad 120 młodyh ludzi 🐦 z całej Europy, którzy zebrali się latem zeszłego roku i zaczęli tworzyć tę aplikację. Mamy jeden cel: pomóc Ci lepiej zrozumieć, jak działają wybory do Parlamentu Europejskiego i jakie listy kandydatów mogą odpowiadać Twoim poglądom, aby można było głosować bardziej pewnie na tych, którzy popierają wasze priorytety. Nasz algorytm jest open-source, przeciągnięte przez Ciebie stwierdzenia zostały sprawdzone przez naukowców politycznych, a Twoje dane są tak zaszyfrowane, że nie mamy możliwości zidentyfikowania Cię :)",
   "settingsPageTitleAssociation": "Stowarzyszenie",
@@ -165,11 +168,11 @@
   "@resultsPage4TitleBottom_ger25": {
     "description": "-> resultsPage4TitleBottom"
   },
-  "resultsPage4TitleLeft_ger25": "Economic intervention",
+  "resultsPage4TitleLeft_ger25": "Free market economics",
   "@resultsPage4TitleLeft_ger25": {
     "description": "-> resultsPage4TitleLeft"
   },
-  "resultsPage4TitleRight_ger25": "Free market economics",
+  "resultsPage4TitleRight_ger25": "Economic intervention",
   "@resultsPage4TitleRight_ger25": {
     "description": "-> resultsPage4TitleRight"
   },
@@ -197,7 +200,7 @@
   "@resultsPage6_1Title_ger25": {
     "description": "-> resultsPage6_1Title"
   },
-  "resultsPage6_2Title_ger25": "But at the German election you also have the option to vote for a specific candidate",
+  "resultsPage6_2Title_ger25": "But in the German election you also have the option to vote for a specific candidate",
   "@resultsPage6_2Title_ger25": {
     "description": "resultsPage6_2Title"
   },
@@ -233,6 +236,7 @@
   "@messageScreenNo_ger25": {
     "description": "-> messageScreenNo"
   },
+  "onBoardingStep4Title": "Level of Education",
   "onBoardingStep4Option1_ger25": "University degree",
   "@onBoardingStep4Option1_ger25": {
     "description": "-> onBoardingStep4Option1"
@@ -245,11 +249,11 @@
   "@onBoardingStep4Option3_ger25": {
     "description": "-> onBoardingStep4Option3"
   },
-  "onBoardingStep4Option4_ger25": "⁠Secondary school diploma (Realschulabschluss)",
+  "onBoardingStep4Option4_ger25": "Middle school diploma",
   "@onBoardingStep4Option4_ger25": {
     "description": "-> onBoardingStep4Option4"
   },
-  "onBoardingStep4Option5_ger25": "⁠Intermediate school diploma (MSA)",
+  "onBoardingStep4Option5_ger25": "some middle school",
   "@onBoardingStep4Option5_ger25": {
     "description": "-> onBoardingStep4Option5"
   },
@@ -334,5 +338,20 @@
   "resultsPage9Text2_ger25": "made for you!",
   "@resultsPage9Text2_ger25": {
     "description": "-> resultsPage9Text2"
-  }
+  },
+  "resultsPage2NoResults": "No results found",
+  "resultsPage10VotingDay": "Get Ready, Voting Day is {date}",
+  "resultsPage10VotingQuestion": "Are you going to vote?",
+  "pushDeactivatedTitle": "Notifications disabled",
+  "pushDeactivatedText": "To be able to receive Push Notifcation enable them in the settings",
+  "pushDeactivatedCancel": "Close",
+  "pushDeactivatedConfirm": "Open Settings",
+  "resultsPageCandidatesShuffle": "Shuffle my politcal love 🔀",
+  "resultsPageCandidatesNoParties": "no local parties",
+  "electionPageTitle": "Choose an Election",
+  "electionPageSubtitle": "",
+  "electionEU": "European Elections 2024 🇪🇺",
+  "electionDE": "Bundestagswahl 2025 🇩🇪",
+  "resultsPageAllPartiesTitle_ger25": "Your personal ranking of all parties",
+  "resultsPageAllPartiesDescription_ger25": "Including 12 political parties in all Bundesländer in Germany"
 }
