--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_hr.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_hr.arb
@@ -5,6 +5,7 @@
   "ok": "Slažem se",
   "yes": "Da",
   "no": "Ne",
+  "maybe": "Maybe",
   "cancel": "Odustani",
   "textContinue": "Nastavi",
   "alertServerErrorTitle": "Ups!",
@@ -60,8 +61,8 @@
   "resultsPage3Title": "Koliko se slažem s pojedinim skupinama u Europskom parlamentu",
   "resultsPage4TitleTop": "Za EU integraciju",
   "resultsPage4TitleBottom": "Protiv EU integracije",
-  "resultsPage4TitleLeft": "Lijevo",
-  "resultsPage4TitleRight": "Desno",
+  "resultsPage4TitleLeft": "Conservative",
+  "resultsPage4TitleRight": "Progressive",
   "resultsPage4TitleUserHere": "To sam ja, bok!",
   "resultsPage5Title": "S kojom se zastupničkom skupinom u Europskom parlamentu najviše slažem po određenim temama?",
   "resultsPage5Topic1": "Pitanja okoliša",
@@ -92,6 +93,8 @@
   "settingsPageTitleLanguage": "Jezik",
   "settingsPageSubtitleLanguage": "Želim koristiti aplikaciju na",
   "settingsPageTextLanguage": "Za promjenu jezika, pritisni trenutni odabir",
+  "settingsPageTitleElection": "Election",
+  "settingsPageTextElection": "To change the questionnaire, click on the current one",
   "settingsPageTitleAbout": "O nama",
   "settingsPageTextAbout": "Palumba nije poduzeće, politička stranka, niti vlada. Mi smo nezavisna i neprofitna organizacija od 120+ mladih ljudi 🐦 iz cijele Europe koja se udružila prošloga ljeta i pokrenula izradu ove aplikacije sa samo jednim ciljem: želimo ti pomoći da bolje razumiješ kako funkcioniraju Europski izbori i koja lista kandidata najbolje odgovara tvojim stavovima i time ti olakšali odabir kada dođe vrijeme glasovanja. Naš je algoritam otvorenog tipa, izjave su provjerene od strane političkih znanstvenika, a tvoji su podaci zaštićeni do te mjere da nema šanse da saznamo tko si :)",
   "settingsPageTitleAssociation": "Organizacija",
@@ -165,11 +168,11 @@
   "@resultsPage4TitleBottom_ger25": {
     "description": "-> resultsPage4TitleBottom"
   },
-  "resultsPage4TitleLeft_ger25": "Economic intervention",
+  "resultsPage4TitleLeft_ger25": "Free market economics",
   "@resultsPage4TitleLeft_ger25": {
     "description": "-> resultsPage4TitleLeft"
   },
-  "resultsPage4TitleRight_ger25": "Free market economics",
+  "resultsPage4TitleRight_ger25": "Economic intervention",
   "@resultsPage4TitleRight_ger25": {
     "description": "-> resultsPage4TitleRight"
   },
@@ -197,7 +200,7 @@
   "@resultsPage6_1Title_ger25": {
     "description": "-> resultsPage6_1Title"
   },
-  "resultsPage6_2Title_ger25": "But at the German election you also have the option to vote for a specific candidate",
+  "resultsPage6_2Title_ger25": "But in the German election you also have the option to vote for a specific candidate",
   "@resultsPage6_2Title_ger25": {
     "description": "resultsPage6_2Title"
   },
@@ -233,6 +236,7 @@
   "@messageScreenNo_ger25": {
     "description": "-> messageScreenNo"
   },
+  "onBoardingStep4Title": "Level of Education",
   "onBoardingStep4Option1_ger25": "University degree",
   "@onBoardingStep4Option1_ger25": {
     "description": "-> onBoardingStep4Option1"
@@ -245,11 +249,11 @@
   "@onBoardingStep4Option3_ger25": {
     "description": "-> onBoardingStep4Option3"
   },
-  "onBoardingStep4Option4_ger25": "⁠Secondary school diploma (Realschulabschluss)",
+  "onBoardingStep4Option4_ger25": "Middle school diploma",
   "@onBoardingStep4Option4_ger25": {
     "description": "-> onBoardingStep4Option4"
   },
-  "onBoardingStep4Option5_ger25": "⁠Intermediate school diploma (MSA)",
+  "onBoardingStep4Option5_ger25": "some middle school",
   "@onBoardingStep4Option5_ger25": {
     "description": "-> onBoardingStep4Option5"
   },
@@ -334,5 +338,20 @@
   "resultsPage9Text2_ger25": "made for you!",
   "@resultsPage9Text2_ger25": {
     "description": "-> resultsPage9Text2"
-  }
+  },
+  "resultsPage2NoResults": "No results found",
+  "resultsPage10VotingDay": "Get Ready, Voting Day is {date}",
+  "resultsPage10VotingQuestion": "Are you going to vote?",
+  "pushDeactivatedTitle": "Notifications disabled",
+  "pushDeactivatedText": "To be able to receive Push Notifcation enable them in the settings",
+  "pushDeactivatedCancel": "Close",
+  "pushDeactivatedConfirm": "Open Settings",
+  "resultsPageCandidatesShuffle": "Shuffle my politcal love 🔀",
+  "resultsPageCandidatesNoParties": "no local parties",
+  "electionPageTitle": "Choose an Election",
+  "electionPageSubtitle": "",
+  "electionEU": "European Elections 2024 🇪🇺",
+  "electionDE": "Bundestagswahl 2025 🇩🇪",
+  "resultsPageAllPartiesTitle_ger25": "Your personal ranking of all parties",
+  "resultsPageAllPartiesDescription_ger25": "Including 12 political parties in all Bundesländer in Germany"
 }
