--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_sk.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_sk.arb
@@ -5,6 +5,7 @@
   "ok": "Ok",
   "yes": "Áno",
   "no": "Nie",
+  "maybe": "Maybe",
   "cancel": "Zrušiť",
   "textContinue": "Pokračovať",
   "alertServerErrorTitle": "Ups!",
@@ -60,8 +61,8 @@
   "resultsPage3Title": "Ako blízko mám ku skupinám Európskeho parlamentu",
   "resultsPage4TitleTop": "Za európsku integráciu",
   "resultsPage4TitleBottom": "Proti európskej integrácii",
-  "resultsPage4TitleLeft": "Ľavica",
-  "resultsPage4TitleRight": "Pravica",
+  "resultsPage4TitleLeft": "Conservative",
+  "resultsPage4TitleRight": "Progressive",
   "resultsPage4TitleUserHere": "To som ja, ahoj!",
   "resultsPage5Title": "Pokiaľ ide o konkrétnejšie témy, ku ktorej skupine Európskeho parlamentu mám bližšie?",
   "resultsPage5Topic1": "Otázky životného prostredia",
@@ -92,6 +93,8 @@
   "settingsPageTitleLanguage": "Jazyk",
   "settingsPageSubtitleLanguage": "Preferujem používať túto aplikáciu v",
   "settingsPageTextLanguage": "Pre zmenu jazyka, kliknite na aktuálne uvedený jazyk",
+  "settingsPageTitleElection": "Election",
+  "settingsPageTextElection": "To change the questionnaire, click on the current one",
   "settingsPageTitleAbout": "O nás",
   "settingsPageTextAbout": "Palumba nie je spoločnosť, ani politická strana, ani vláda. Sme nezávislá nezisková organizácia 120+ mladých ľudí 🐦 z celej Európy, ktorí sa minulé leto spojili a začali vytvárať túto aplikáciu. Máme jediný cieľ: pomôcť vám lepšie pochopiť, ako fungujú európske voľby a ktorí kandidáti by mohli byť najbližšie vašim predstavám. Chceme aby ste mohli s väčšou istotou voliť ľudí, ktorí podporujú vaše priority. Náš algoritmus má otvorený zdrojový kód a výroky, ku ktorým hľadáte zhodu, boli overené politológmi. Vaše údaje sú taaaak zašifrované, že neexistuje nijaký spôsob ako vás identifikovať :)",
   "settingsPageTitleAssociation": "Organizácia",
@@ -165,11 +168,11 @@
   "@resultsPage4TitleBottom_ger25": {
     "description": "-> resultsPage4TitleBottom"
   },
-  "resultsPage4TitleLeft_ger25": "Economic intervention",
+  "resultsPage4TitleLeft_ger25": "Free market economics",
   "@resultsPage4TitleLeft_ger25": {
     "description": "-> resultsPage4TitleLeft"
   },
-  "resultsPage4TitleRight_ger25": "Free market economics",
+  "resultsPage4TitleRight_ger25": "Economic intervention",
   "@resultsPage4TitleRight_ger25": {
     "description": "-> resultsPage4TitleRight"
   },
@@ -197,7 +200,7 @@
   "@resultsPage6_1Title_ger25": {
     "description": "-> resultsPage6_1Title"
   },
-  "resultsPage6_2Title_ger25": "But at the German election you also have the option to vote for a specific candidate",
+  "resultsPage6_2Title_ger25": "But in the German election you also have the option to vote for a specific candidate",
   "@resultsPage6_2Title_ger25": {
     "description": "resultsPage6_2Title"
   },
@@ -233,6 +236,7 @@
   "@messageScreenNo_ger25": {
     "description": "-> messageScreenNo"
   },
+  "onBoardingStep4Title": "Level of Education",
   "onBoardingStep4Option1_ger25": "University degree",
   "@onBoardingStep4Option1_ger25": {
     "description": "-> onBoardingStep4Option1"
@@ -245,11 +249,11 @@
   "@onBoardingStep4Option3_ger25": {
     "description": "-> onBoardingStep4Option3"
   },
-  "onBoardingStep4Option4_ger25": "⁠Secondary school diploma (Realschulabschluss)",
+  "onBoardingStep4Option4_ger25": "Middle school diploma",
   "@onBoardingStep4Option4_ger25": {
     "description": "-> onBoardingStep4Option4"
   },
-  "onBoardingStep4Option5_ger25": "⁠Intermediate school diploma (MSA)",
+  "onBoardingStep4Option5_ger25": "some middle school",
   "@onBoardingStep4Option5_ger25": {
     "description": "-> onBoardingStep4Option5"
   },
@@ -334,5 +338,20 @@
   "resultsPage9Text2_ger25": "made for you!",
   "@resultsPage9Text2_ger25": {
     "description": "-> resultsPage9Text2"
-  }
+  },
+  "resultsPage2NoResults": "No results found",
+  "resultsPage10VotingDay": "Get Ready, Voting Day is {date}",
+  "resultsPage10VotingQuestion": "Are you going to vote?",
+  "pushDeactivatedTitle": "Notifications disabled",
+  "pushDeactivatedText": "To be able to receive Push Notifcation enable them in the settings",
+  "pushDeactivatedCancel": "Close",
+  "pushDeactivatedConfirm": "Open Settings",
+  "resultsPageCandidatesShuffle": "Shuffle my politcal love 🔀",
+  "resultsPageCandidatesNoParties": "no local parties",
+  "electionPageTitle": "Choose an Election",
+  "electionPageSubtitle": "",
+  "electionEU": "European Elections 2024 🇪🇺",
+  "electionDE": "Bundestagswahl 2025 🇩🇪",
+  "resultsPageAllPartiesTitle_ger25": "Your personal ranking of all parties",
+  "resultsPageAllPartiesDescription_ger25": "Including 12 political parties in all Bundesländer in Germany"
 }
