--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_sl.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_sl.arb
@@ -5,6 +5,7 @@
   "ok": "Ok",
   "yes": "Da",
   "no": "Ne",
+  "maybe": "Maybe",
   "cancel": "Prekliči",
   "textContinue": "Naprej",
   "alertServerErrorTitle": "Ups!",
@@ -60,8 +61,8 @@
   "resultsPage3Title": "Ujemanje z evropskimi parlamentarnimi skupinami",
   "resultsPage4TitleTop": "Pro-EU Integration",
   "resultsPage4TitleBottom": "Anti-EU Integration",
-  "resultsPage4TitleLeft": "Levica",
-  "resultsPage4TitleRight": "Desnica",
+  "resultsPage4TitleLeft": "Conservative",
+  "resultsPage4TitleRight": "Progressive",
   "resultsPage4TitleUserHere": "It’s me, hi!",
   "resultsPage5Title": "Bolj specifično, kateri evropski parlamentarni skupini sem bližje?",
   "resultsPage5Topic1": "Okoljska problematika",
@@ -92,6 +93,8 @@
   "settingsPageTitleLanguage": "Jezik",
   "settingsPageSubtitleLanguage": "Aplikacijo bi rad uporabljal v",
   "settingsPageTextLanguage": "Za spremembo jezika, kliknite na trenutnega",
+  "settingsPageTitleElection": "Election",
+  "settingsPageTextElection": "To change the questionnaire, click on the current one",
   "settingsPageTitleAbout": "O aplikaciji",
   "settingsPageTextAbout": "Palumba ni podjetje, niti politična stranka, niti vlada. Smo neodvisno neprofitno združenje več kot 120 mladih ljudi 🐦 iz vse Evrope. Zbrali smo se lansko poletje in začeli ustvarjati to aplikacijo. Imamo en cilj: vam pomagati da bolje razumete, kako delujejo evropske volitve in kateri kandidati se najbolje ujemajo z vašimi idejami, tako da boste lahko bolj samozavestno glasovali za ljudi, ki podpirajo vaše prioritete. Naš algoritem je odprtokoden, izjave, ki jih podrsate, so pregledali politični znanstveniki, vaši podatki pa so tako zelo šifrirani, da ni možnosti, da bi vas kdajkoli identificirali :)",
   "settingsPageTitleAssociation": "Društvo",
@@ -165,11 +168,11 @@
   "@resultsPage4TitleBottom_ger25": {
     "description": "-> resultsPage4TitleBottom"
   },
-  "resultsPage4TitleLeft_ger25": "Economic intervention",
+  "resultsPage4TitleLeft_ger25": "Free market economics",
   "@resultsPage4TitleLeft_ger25": {
     "description": "-> resultsPage4TitleLeft"
   },
-  "resultsPage4TitleRight_ger25": "Free market economics",
+  "resultsPage4TitleRight_ger25": "Economic intervention",
   "@resultsPage4TitleRight_ger25": {
     "description": "-> resultsPage4TitleRight"
   },
@@ -197,7 +200,7 @@
   "@resultsPage6_1Title_ger25": {
     "description": "-> resultsPage6_1Title"
   },
-  "resultsPage6_2Title_ger25": "But at the German election you also have the option to vote for a specific candidate",
+  "resultsPage6_2Title_ger25": "But in the German election you also have the option to vote for a specific candidate",
   "@resultsPage6_2Title_ger25": {
     "description": "resultsPage6_2Title"
   },
@@ -233,6 +236,7 @@
   "@messageScreenNo_ger25": {
     "description": "-> messageScreenNo"
   },
+  "onBoardingStep4Title": "Level of Education",
   "onBoardingStep4Option1_ger25": "University degree",
   "@onBoardingStep4Option1_ger25": {
     "description": "-> onBoardingStep4Option1"
@@ -245,11 +249,11 @@
   "@onBoardingStep4Option3_ger25": {
     "description": "-> onBoardingStep4Option3"
   },
-  "onBoardingStep4Option4_ger25": "⁠Secondary school diploma (Realschulabschluss)",
+  "onBoardingStep4Option4_ger25": "Middle school diploma",
   "@onBoardingStep4Option4_ger25": {
     "description": "-> onBoardingStep4Option4"
   },
-  "onBoardingStep4Option5_ger25": "⁠Intermediate school diploma (MSA)",
+  "onBoardingStep4Option5_ger25": "some middle school",
   "@onBoardingStep4Option5_ger25": {
     "description": "-> onBoardingStep4Option5"
   },
@@ -334,5 +338,20 @@
   "resultsPage9Text2_ger25": "made for you!",
   "@resultsPage9Text2_ger25": {
     "description": "-> resultsPage9Text2"
-  }
+  },
+  "resultsPage2NoResults": "No results found",
+  "resultsPage10VotingDay": "Get Ready, Voting Day is {date}",
+  "resultsPage10VotingQuestion": "Are you going to vote?",
+  "pushDeactivatedTitle": "Notifications disabled",
+  "pushDeactivatedText": "To be able to receive Push Notifcation enable them in the settings",
+  "pushDeactivatedCancel": "Close",
+  "pushDeactivatedConfirm": "Open Settings",
+  "resultsPageCandidatesShuffle": "Shuffle my politcal love 🔀",
+  "resultsPageCandidatesNoParties": "no local parties",
+  "electionPageTitle": "Choose an Election",
+  "electionPageSubtitle": "",
+  "electionEU": "European Elections 2024 🇪🇺",
+  "electionDE": "Bundestagswahl 2025 🇩🇪",
+  "resultsPageAllPartiesTitle_ger25": "Your personal ranking of all parties",
+  "resultsPageAllPartiesDescription_ger25": "Including 12 political parties in all Bundesländer in Germany"
 }
